kubefiles/my-deployment-1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app-1
  template:
    metadata:
      labels:
        app: my-app-1
    spec:
      containers:
      - image: svc-hello
        name: my-svc-1
        ports:
        - containerPort: 8080
        imagePullPolicy: Never

...
