kubefiles/my-deployment-2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app-2
  template:
    metadata:
      labels:
        app: my-app-2
    spec:
      containers:
      - image: svc-second
        name: my-svc-2
        ports:
        - containerPort: 8080
        imagePullPolicy: Never

...
