kubefiles/service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-1
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: my-app-1
  #type: NodePort
