kubefiles/service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-2
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: my-app-2
  #type: NodePort
